# paddlemetrics

./: .gitignore  .mailmap  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
paddlemetrics/: __about__.py  __init__.py  aggregation.py  collections.py  metric.py
paddlemetrics/audio/: __init__.py  _deprecated.py  dnsmos.py  nisqa.py  pesq.py  pit.py  sdr.py  snr.py  srmr.py  stoi.py
paddlemetrics/classification/: __init__.py  accuracy.py  auroc.py  average_precision.py  base.py  calibration_error.py  cohen_kappa.py  confusion_matrix.py  eer.py  exact_match.py  f_beta.py  group_fairness.py  hamming.py  hinge.py  jaccard.py  logauc.py  matthews_corrcoef.py  negative_predictive_value.py  precision_fixed_recall.py  precision_recall.py  precision_recall_curve.py  ranking.py  recall_fixed_precision.py  roc.py  sensitivity_specificity.py  specificity.py  specificity_sensitivity.py  stat_scores.py
paddlemetrics/clustering/: __init__.py  adjusted_mutual_info_score.py  adjusted_rand_score.py  calinski_harabasz_score.py  cluster_accuracy.py  davies_bouldin_score.py  dunn_index.py  fowlkes_mallows_index.py  homogeneity_completeness_v_measure.py  mutual_info_score.py  normalized_mutual_info_score.py  rand_score.py
paddlemetrics/detection/: __init__.py  _deprecated.py  _mean_ap.py  ciou.py  diou.py  giou.py  helpers.py  iou.py  mean_ap.py  panoptic_qualities.py
paddlemetrics/functional/: __init__.py
paddlemetrics/image/: __init__.py  _deprecated.py  arniqa.py  d_lambda.py  d_s.py  dists.py  ergas.py  fid.py  inception.py  kid.py  lpip.py  mifid.py  perceptual_path_length.py  psnr.py  psnrb.py  qnr.py  rase.py  rmse_sw.py  sam.py  scc.py  ssim.py  tv.py  uqi.py  vif.py
paddlemetrics/multimodal/: __init__.py  clip_iqa.py  clip_score.py  lve.py
paddlemetrics/nominal/: __init__.py  cramers.py  fleiss_kappa.py  pearson.py  theils_u.py  tschuprows.py
paddlemetrics/regression/: __init__.py  concordance.py  cosine_similarity.py  crps.py  csi.py  explained_variance.py  js_divergence.py  kendall.py  kl_divergence.py  log_cosh.py  log_mse.py  mae.py  mape.py  minkowski.py  mse.py  nrmse.py  pearson.py  r2.py  rse.py  spearman.py  symmetric_mape.py  tweedie_deviance.py  wmape.py
paddlemetrics/retrieval/: __init__.py  _deprecated.py  auroc.py  average_precision.py  base.py  fall_out.py  hit_rate.py  ndcg.py  precision.py  precision_recall_curve.py  r_precision.py  recall.py  reciprocal_rank.py
paddlemetrics/segmentation/: __init__.py  (+4 more)
requirements/: _tests.txt  audio.txt  base.txt  classification.txt  detection.txt  image.txt  multimodal.txt  nominal.txt  regression.txt  text.txt
(+384 files in other folders)
