[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlemetrics"
version = "0.1.0"
description = "Machine learning metrics for PaddlePaddle"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "PaddleMetrics Authors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>1.20.0",
    "packaging>17.1",
]

[project.optional-dependencies]
audio = [
    "pesq",
    "pystoi",
    "gammatone",
    "librosa>=0.10.0",
    "requests>=2.19.0",
]
classification = [
    "scipy>1.0.0",
    "scikit-learn>1.5.0",
]
detection = [
    "pycocotools>2.0.0",
]
image = [
    "scipy>1.0.0",
    "scikit-image>=0.19.0",
]
text = [
    "nltk>3.8.1",
    "tqdm",
    "regex>=2021.9.24",
    "sentencepiece>=0.2.0",
]
multimodal = [
    "transformers>=4.43.0",
]
nominal = [
    "scipy>1.0.0",
    "pandas>1.4.0",
]
clustering = []
segmentation = []
regression = [
    "scipy>1.0.0",
]
retrieval = []
visual = [
    "matplotlib>=3.6.0",
]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "coverage>=7.0.0",
    "cloudpickle>1.3",
    "scikit-learn>1.5.0",
    "psutil>=5.8.0",
]
dev = [
    "paddlemetrics[tests,visual]",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/paddlemetrics/paddlemetrics"
Repository = "https://github.com/paddlemetrics/paddlemetrics"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--color=yes",
    "--disable-pytest-warnings",
    "--timeout=300",
]
markers = [
    "DDP: mark a test as Distributed Data Parallel",
]
xfail_strict = true
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["paddlemetrics"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
